<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/primary_color"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_login"
        android:fontFamily="@font/robotobold"
        android:textSize="11sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edt_login_username_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:hint="@string/email"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="16dp"
        android:background="@drawable/edt_bg"/>

    <EditText
        android:id="@+id/edt_login_password_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:hint="@string/pass"
        android:textSize="12sp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_show_pass"
        android:drawablePadding="16dp"
        android:background="@drawable/edt_bg"/>
    
    <Button
        android:id="@+id/btn_login_id"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/login"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/forgot_pass"
            android:fontFamily="@font/robotobold"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_regis_now_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regis_now"
            android:fontFamily="@font/robotobold"
            android:textColor="@color/text_red_color"
            android:textSize="16sp"
            android:textAlignment="center"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:fontFamily="@font/robotobold"
        android:textSize="16sp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_login_gg_id"
        android:layout_width="224dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/login_w_gg"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_gg"
        android:drawableEnd="8dp"/>

    <Button
        android:id="@+id/btn_login_apple_id"
        android:layout_width="224dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/login_w_apple"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_apple"
        android:drawableEnd="8dp"/>
</LinearLayout>