<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/primary_color"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:fontFamily="@font/robotobold"
        android:textSize="11sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edt_regis_username_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:hint="@string/email"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="16dp"
        android:background="@drawable/edt_bg"/>

    <Button
        android:id="@+id/btn_approve"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/approve"
        android:textAllCaps="true"/>
</LinearLayout>